--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Second Assaignment Repository</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles/second.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <header>
+      <nav class="nav-section inter-normal">
+        <div class="nav-logo">
+          <img src="assets/logo.png" alt="" />
+        </div>
+        <ul>
+          <li><a href="" class="list-home">Home</a></li>
+          <li><a href="" class="list-shop">Shop</a></li>
+          <li><a href="" class="list-about">About Us</a></li>
+          <li>
+            <a href="" class="list-cart"
+              ><i class="fa-solid fa-cart-shopping"></i> Cart($56)</a
+            >
+          </li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
