Added Banner Section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,115 @@
           </li>
         </ul>
       </nav>
+      <section class="banner-section">
+        <div class="banner-left">
+          <h3 class="banner-title noto-serif-normal">
+            <span id="banner-always">ALWAYS</span> FRESH <br />FLOWERS
+          </h3>
+          <p class="banner-description">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <img src="assets/hero-flower.png" alt="" class="banner-right" />
+      </section>
     </header>
+
+    <main>
+      <section class="plant-section">
+        <div class="plant-info">
+          <h3 class="plant-title"><span class="our-title">Our</span> Plants</h3>
+          <p class="plant-description">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From <br />
+            classic roses to exotic blooms, we offer a wide variety of fresh.
+          </p>
+        </div>
+
+        <div class="card-container">
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+          <div class="card">
+            <img
+              src="assets/sample-flower-image.png"
+              alt=""
+              class="card-image"
+            />
+            <h3 class="card-title">Lily Blossom</h3>
+            <p class="card-price">20 USD</p>
+            <button class="card-btn">ADD TO CART</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
