Added Plants Lover And Footer

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h3 class="banner-title noto-serif-normal">
             <span id="banner-always">ALWAYS</span> FRESH <br />FLOWERS
           </h3>
-          <p class="banner-description">
+          <p class="banner-description inter-normal">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From classic roses to exotic blooms, we offer a wide
             variety of fresh flowers that are perfect for any occasion.
@@ -54,8 +54,10 @@
     <main>
       <section class="plant-section">
         <div class="plant-info">
-          <h3 class="plant-title"><span class="our-title">Our</span> Plants</h3>
-          <p class="plant-description">
+          <h3 class="plant-title noto-serif-normal">
+            <span class="our-title">Our</span> Plants
+          </h3>
+          <p class="plant-description inter-normal">
             Indulge your senses with the beauty and fragrance of our fresh
             flower shop. From <br />
             classic roses to exotic blooms, we offer a wide variety of fresh.
@@ -123,7 +125,7 @@
             <p class="card-price">20 USD</p>
             <button class="card-btn">ADD TO CART</button>
           </div>
-          <div class="card">
+          <div class="card" id="card1">
             <img
               src="assets/sample-flower-image.png"
               alt=""
@@ -133,7 +135,7 @@
             <p class="card-price">20 USD</p>
             <button class="card-btn">ADD TO CART</button>
           </div>
-          <div class="card">
+          <div class="card" id="card2">
             <img
               src="assets/sample-flower-image.png"
               alt=""
@@ -145,6 +147,112 @@
           </div>
         </div>
       </section>
+
+      <section class="plants-lover-section">
+        <img src="assets/flower-store.png" alt="" class="plants-lover-left" />
+
+        <div class="plants-lover-right">
+          <h3 class="plants-lover-title noto-serif-normal">
+            Flower & Plants Lover
+          </h3>
+
+          <ul class="plants-lover-description inter-normal">
+            <li class="plants-lover-list">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="plants-lover-list">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="plants-lover-list">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li class="plants-lover-list">
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="join-section">
+        <h3 class="join-title noto-serif-normal">Join the colorful Bunch</h3>
+        <div class="join-input inter-normal">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Write email"
+            class="input-email"
+          />
+          <button class="join-btn">Subscribe</button>
+        </div>
+      </section>
+
+      <section class="latest-deal-section">
+        <div class="latest-info">
+          <h3 class="latest-title">
+            <span id="latest-title-color">Latest</span> Deals
+          </h3>
+          <p class="latest-description">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+
+        <div class="latest-image-section">
+          <div class="image-type-1">
+            <div class="image-A"></div>
+            <div class="image-B"></div>
+          </div>
+          <div class="image-type-2"></div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <section class="footer-section">
+        <div class="footer-info">
+          <img src="assets/logo.png" alt="" class="footer-logo" />
+          <p class="footer-description">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+        <div class="footer-contact1">
+          <ul>
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Blog</li>
+            <li>FAQ</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div class="footer-contact2">
+          <ul>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Privacy Policy</li>
+            <li>Terms Of Services</li>
+            <li>Help Center</li>
+          </ul>
+        </div>
+        <div class="footer-link">
+          <div class="link-list">
+            <a href=""><img src="assets/icon-linkedin.png" alt="" /></a>
+            <a href=""><img src="assets/icon-twitter.png" alt="" /></a>
+            <a href=""><img src="assets/icon-facebook.png" alt="" /></a>
+            <a href=""><img src="assets/icon-youtube.png" alt="" /></a>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
