Added Trust Banner

--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
         <img src="assets/flower-store.png" alt="" class="plants-lover-left" />
 
         <div class="plants-lover-right">
+          <img
+            src="assets/trusted-badge.png"
+            alt=""
+            class="banner-lover-plant"
+          />
           <h3 class="plants-lover-title noto-serif-normal">
             Flower & Plants Lover
           </h3>
@@ -206,15 +211,26 @@
             variety of fresh.
           </p>
         </div>
-
-        <div class="latest-image-section">
-          <div class="image-type-1">
-            <div class="image-A"></div>
-            <div class="image-B"></div>
-          </div>
-          <div class="image-type-2"></div>
-        </div>
       </section>
+
+      <div class="latest-image-section">
+        <div class="image-type-1">
+          <div class="image-A">
+            <h3 class="latest-image-title">60% Off | Bloom Plant</h3>
+            <a href=""><u>Shop Now</u></a>
+          </div>
+
+          <div class="image-B">
+            <h3 class="latest-image-title">30% Off | Ana Plant</h3>
+            <a href=""><u>Shop Now</u></a>
+          </div>
+        </div>
+
+        <div class="image-type-2">
+          <h3 class="latest-image-title-2">25% Off | Zabo Plant</h3>
+          <a href=""><u>Shop Now</u></a>
+        </div>
+      </div>
     </main>
 
     <footer>
