--- a/index.html
+++ b/index.html
@@ -188,14 +188,16 @@
 
       <section class="join-section">
         <h3 class="join-title noto-serif-normal">Join the colorful Bunch</h3>
-        <div class="join-input inter-normal">
-          <input
-            type="email"
-            name="email"
-            id="email"
-            placeholder="Write email"
-            class="input-email"
-          />
+        <div class="join-input-container">
+          <div class="join-input">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Write email"
+            />
+          </div>
+
           <button class="join-btn">Subscribe</button>
         </div>
       </section>
