Added Responsive In Latest Section

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           </h3>
           <p class="plant-description inter-normal">
             Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From <br />
-            classic roses to exotic blooms, we offer a wide variety of fresh.
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
           </p>
         </div>
 
@@ -185,6 +185,16 @@
           </ul>
         </div>
       </section>
+      <section class="latest-deal-section">
+        <h3 class="latest-deal-title">
+          <span id="latest-color">Latest</span> Deals
+        </h3>
+        <p class="latest-deal-description">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+      </section>
 
       <section class="join-section">
         <h3 class="join-title noto-serif-normal">Join the colorful Bunch</h3>
@@ -201,38 +211,6 @@
           <button class="join-btn">Subscribe</button>
         </div>
       </section>
-
-      <section class="latest-deal-section">
-        <div class="latest-info">
-          <h3 class="latest-title">
-            <span id="latest-title-color">Latest</span> Deals
-          </h3>
-          <p class="latest-description">
-            Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh.
-          </p>
-        </div>
-      </section>
-
-      <div class="latest-image-section">
-        <div class="image-type-1">
-          <div class="image-A">
-            <h3 class="latest-image-title">60% Off | Bloom Plant</h3>
-            <a href=""><u>Shop Now</u></a>
-          </div>
-
-          <div class="image-B">
-            <h3 class="latest-image-title">30% Off | Ana Plant</h3>
-            <a href=""><u>Shop Now</u></a>
-          </div>
-        </div>
-
-        <div class="image-type-2">
-          <h3 class="latest-image-title-2">25% Off | Zabo Plant</h3>
-          <a href=""><u>Shop Now</u></a>
-        </div>
-      </div>
     </main>
 
     <footer>
