Added New Feature

--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
         </div>
       </section>
       <section class="latest-deal-section">
-        <h3 class="latest-deal-title">
+        <h3 class="latest-deal-title noto-serif-normal">
           <span id="latest-color">Latest</span> Deals
         </h3>
-        <p class="latest-deal-description">
+        <p class="latest-deal-description inter-normal">
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From classic roses to exotic blooms, we offer a wide variety of
           fresh.
